# IndiaExitBarrier_RevOpt

./: AGENTS.md  Auxillaries.cpp  Auxillaries.h  Basics.cpp  Basics.h  CMakeLists.txt  CounterfactualExercise.cpp  CounterfactualExercise.h  RandomDraw.cpp  RandomDraw.h  SimulationData.cpp  SimulationData.h  SolveModel.cpp  SolveModel.h  SolveModel_InitialPeriod.cpp  SolveModel_InitialPeriod.h  main.cpp
StructuralData_InflationAdj_NormalizeAll/: ASI_Data_Estimation_Capital_Extreme_Good0_Sector0.csv  ASI_Data_Estimation_Capital_Extreme_Good0_Sector1.csv  ASI_Data_Estimation_Capital_Extreme_Good1_Sector0.csv  ASI_Data_Estimation_Capital_Extreme_Good1_Sector1.csv  ASI_Data_Estimation_Capital_Good0_Sector0_ForSim.csv  ASI_Data_Estimation_Capital_Good0_Sector1.csv  ASI_Data_Estimation_Capital_Good1_Sector0_ForSim.csv  ASI_Data_Estimation_Capital_Good1_Sector1_ForSim.csv  ASI_Data_Estimation_Capital_Miss_Good0_Sector0.csv  ASI_Data_Estimation_Capital_Miss_Good0_Sector1_ForSim.csv  ASI_Data_Estimation_Capital_Miss_Good1_Sector0_ForSim.csv  ASI_Data_Estimation_Capital_Miss_Good1_Sector1.csv  ASI_Data_Estimation_Employ_uc_Extreme_Good0_Sector0.csv  ASI_Data_Estimation_Employ_uc_Extreme_Good0_Sector1_ForSim.csv  ASI_Data_Estimation_Employ_uc_Extreme_Good1_Sector0.csv  ASI_Data_Estimation_Employ_uc_Extreme_Good1_Sector1_ForSim.csv  ASI_Data_Estimation_Employ_uc_Good0_Sector0.csv  ASI_Data_Estimation_Employ_uc_Good0_Sector1_ForSim.csv  ASI_Data_Estimation_Employ_uc_Good1_Sector0_ForSim.csv  ASI_Data_Estimation_Employ_uc_Good1_Sector1.csv  ASI_Data_Estimation_Employ_uc_Miss_Good0_Sector0_ForSim.csv  ASI_Data_Estimation_Employ_uc_Miss_Good0_Sector1.csv  ASI_Data_Estimation_Employ_uc_Miss_Good1_Sector0.csv  ASI_Data_Estimation_Employ_uc_Miss_Good1_Sector1.csv  ASI_Data_Estimation_Employ_ur_Extreme_Good0_Sector0.csv  ASI_Data_Estimation_Employ_ur_Extreme_Good0_Sector1.csv  ASI_Data_Estimation_Employ_ur_Extreme_Good1_Sector0.csv  ASI_Data_Estimation_Employ_ur_Extreme_Good1_Sector0_ForSim.csv  ASI_Data_Estimation_Employ_ur_Extreme_Good1_Sector1.csv  ASI_Data_Estimation_Employ_ur_Good0_Sector0.csv  ASI_Data_Estimation_Employ_ur_Good0_Sector1.csv  ASI_Data_Estimation_Employ_ur_Good1_Sector0_ForSim.csv  ASI_Data_Estimation_Employ_ur_Good1_Sector1.csv  ASI_Data_Estimation_Employ_ur_Miss_Good0_Sector0.csv  ASI_Data_Estimation_Employ_ur_Miss_Good0_Sector1_ForSim.csv  ASI_Data_Estimation_Employ_ur_Miss_Good1_Sector0_ForSim.csv  ASI_Data_Estimation_Employ_ur_Miss_Good1_Sector1_ForSim.csv  ASI_Data_Estimation_Indicator_Good0_Sector0.csv  ASI_Data_Estimation_Indicator_Good0_Sector1.csv  ASI_Data_Estimation_Indicator_Good1_Sector0_ForSim.csv  (+37 more)
archive/: Auxillaries.cpp  Basics.cpp  Basics.h  CounterfactualExercise.cpp  CounterfactualExercise.h  DFS.h  EstimationAuxiliary.cpp  EstimationAuxiliary.h  EstimationIndirectInference_StandardDeviation.cpp  EstimationIndirectInference_StandardDeviation.h  Estimation_IndirectInference.cpp  Estimation_IndirectInference.h  Interpolation_spline.cpp  Interpolation_spline.h  Ipopt_wrapper.h  RandomDraw.cpp  RandomDraw.h  SimulationData.cpp  SimulationData.h  SolveModel.cpp  SolveModel.h  direct_search.h  main.cpp  multithread_loop.h  soo.h
